--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap");
-/*#bloc_page {
- 
-    margin: 0 auto;
-    max-width: 1280px;
- }*/
+
  *
  {
-        font-family : 'Roboto', sans-serif;
-        
+    font-family : 'Roboto', sans-serif;        
  }
 .header__logo{
     color: black;
@@ -93,7 +88,49 @@
     position: relative;
 }
 .fonctionnement__liste{
-    padding: 0.70rem 1.0rem;
-    display:flex;
+    display: flex;
+    justify-content: space-between;
+    padding: 0.8rem;
+}
+.fonctionnement__liste__fon {
+    display: flex;
+    background-color: #f3f3f3;;
+    width: 23rem;
+    height: 3.5rem;
+    border-radius: 1.25rem;
+    box-shadow: 0.25rem 0.25rem 0.5rem rgba(0,0,0,0.125);
+}
+.fonctionnement__liste__fon__icon{
+   
+    color: grey;
+    padding-left: 1.8rem;
+    padding-top: 1.3rem;
+}
+.fonctionnement__liste__fon .text{
+    padding-top: 1.2rem;
+    margin-left: 1rem;
+} 
+.fonctionnement__liste__fon:hover{
+    background-color: #e4d4f6;
+
+}
+.sectionfontionnement {
+  counter-reset: count;
+}
+.fonctionnement__liste__fon::before {
+    counter-increment: count 1;
+    content: counter(count) " ";
+    background: #9356dc;
+    height: 1.5rem;
+    width: 1.5rem;
+    border-radius: 6.25rem;
+    color: white;   
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1.1rem;
+    
+    margin-left: -0.65rem;
+    
 }
 
