--- a/css/styles.css
+++ b/css/styles.css
@@ -76,13 +76,10 @@
    text-decoration: none;
    color:rgb(255, 255, 255);
    font-size: 1.1rem;
-   padding: 0.70rem 1.0rem;
+   padding: 0.70rem 1.5rem;
    background-image: linear-gradient(0deg, rgba(144, 79, 223, 0.9), rgba(255,121,218,0.9));
    border-radius: 6rem;
-}
-
-.recherche__button:hover{
-    box-shadow: 0.25rem 0.25rem 10px rgba(0,0,0,0.5);
+   box-shadow: 0.25rem 0.25rem 10px rgba(0,0,0,0.5);
 }
 
 .soustitre{
@@ -225,6 +222,7 @@ h2.visibility
     background-size: 100% 0;
     background-position: 100% 100%;
     font-weight: bold;
+    margin-right: 1rem;
 
 }
 .restaurants__liste__coeur:hover {
@@ -263,3 +261,147 @@ h2.visibility
     margin-left: -2.8rem;
     margin-right: 0.8rem;
 }
+
+/*page restaurants*/
+
+.restaurants__liste__header{   
+    font-family: "Shrikhand", "cursive";
+    margin-top: 0.16rem;
+    margin-left: 1rem;
+
+    
+}
+.global{
+    display: flex;
+    margin-left: 9.5rem;
+    width: 81rem;
+}
+.restaurants__liste__menu{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 80rem;
+    margin-left: 9.5rem;
+    margin-top: -3.1rem;
+    height: 4.6rem;
+    position: absolute;
+    padding: 0.5rem;    
+    background-color: #f3f3f3;
+    -webkit-transition: opacity .5s ease;
+    transition: opacity .5s ease;
+    border-radius: 2rem 2rem 0 0;
+}
+.restaurants__sousmenu {	
+	padding-left: 1rem;
+	background-color: #f3f3f3;
+	height: 28rem;
+    width: 26rem;
+    
+}
+.menu{
+    font-weight: normal;
+    margin-top: 2.5rem;
+    text-transform: uppercase;
+    padding-top: 0.3rem;
+    
+}
+.border{
+    width: 3rem;
+    height: 0.25rem;
+    background-color: #99e2d0;
+    margin-top: -1rem
+}
+/*.menu::after{
+    content: "";
+    width: 3rem;
+    height: 0.25rem;
+    background-color: #99e2d0;
+    position: absolute;
+    margin-top: 1.5rem;
+    margin-left: -5rem;
+}*/
+.choix{
+    width:95%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    background: white;
+    height: 4.5rem;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    border-radius: 0.82rem;
+    -moz-border-radius: 0.82rem;
+    -webkit-border-radius: 0.82rem;
+    -webkit-box-shadow: 0rem 0rem 1rem -0.5rem rgba(0,0,0,0.99); 
+    box-shadow: 0rem 0rem 1rem -0.5rem rgba(0,0,0,0.99); 
+}
+.choix__titre{
+   margin-top:0.7rem;
+   width: 90%;
+   padding-right: 0.625rem;
+}
+.choix__soustitre{
+    margin-top:-0.250rem;
+    width: 61%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    
+}
+.prix{
+    margin-top:-0.375rem;
+    font-weight: bold;
+}
+/*.restaurants{
+    width: 80rem;
+    height: 10rem;
+}*/
+
+.commander{
+    display: flex;
+    justify-content: center;
+    
+}
+.order{
+    background-color: #f3f3f3;
+    margin-left: 9.6%;
+    margin-right: 8.5%;
+    height: 6rem;
+    
+
+}
+.choix__confirmation{
+    background-color: #99e2d0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 0;
+    transition: 0.5s;
+    margin-top: -3.4rem;
+    border-radius: 0rem 0.82rem 0.82rem 0rem;
+    margin-right: -0.188rem;
+}
+.choix__confirmation:hover{
+    width: 5rem;
+    justify-content: center;
+    margin-top: -3.188rem;
+    margin-bottom: 0.6rem;
+    margin-right: -0.6rem;
+}
+.dish__icon {
+    color: #99e2d0;
+    height: 1.6rem;
+    width: 1.6rem;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 6.25rem;
+}
+.choix__confirmation:hover .dish__icon{
+    transform: rotate(360deg);
+    margin-left: 0rem;
+    transition: 0.5s;
+    
+}
+
