--- a/css/styles.css
+++ b/css/styles.css
@@ -36,18 +36,6 @@
     color: black;
 }
  
-/*@media all and (min-width: 414px) and (max-width: 767px){
-    .header{
-        margin: -2% -2% auto -2%;
-       }
-
-    
-}/*
-@media all and (min-width: 768px) and (max-width: 1280px){
-    img{
-    width:24%;
-    }
-}*/
 .backgroundloc{
     display: flex;
     justify-content:center;
@@ -294,7 +282,7 @@ h2.visibility
 .restaurants__sousmenu {	
 	padding-left: 1rem;
 	background-color: #f3f3f3;
-	height: 28rem;
+	height: auto;
     width: 26rem;
     
 }
@@ -345,17 +333,12 @@ h2.visibility
     width: 61%;
     text-overflow: ellipsis;
     overflow: hidden;
-    white-space: nowrap;
-    
+    white-space: nowrap;    
 }
 .prix{
     margin-top:-0.375rem;
     font-weight: bold;
 }
-/*.restaurants{
-    width: 80rem;
-    height: 10rem;
-}*/
 
 .commander{
     display: flex;
